--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -1,53 +1,195 @@
+$menuHoverColor: steelblue;
+
 body {
-	/*TODO: font*/
-} 
+	background-color:#eee;
+	font-family: 'Work Sans', sans-serif;
+	font-weight: 300;
+	margin: 0;
+
+	&, & * {
+		box-sizing: border-box;
+	}
+
+}
+
+a {
+	color: steelblue;
+
+}
 
 .filtermenu {
-	float: left;
-	width: 20%;
-	background-color: #ddddff;
-	padding: 10px;
-}
+	position: relative;
+	background-color: #000;
 
-.filtermenu h1 {
-	font-size: 14px;
-}
+	.semesterbuttoncontainer {
 
-.filtermenu .semesterbuttoncontainer {
-	text-align: center;
-	padding-bottom: 10px;
-}
+		div {
+		}
 
-.filtermenu .semesterbuttoncontainer div {
-	font-size:20px;
-	float: left;
-	padding: 10px;
-	background-color: #dddddd;
-}
+		.selected{
+		}
+	}
 
-.filtermenu .semesterbuttoncontainer .selected{
-	background-color: #ddffdd;
-}
+	.searchfield {
+		font-family: 'Work Sans', sans-serif;
+		display: block;
+		width:100%;
+		max-width:15%;
+		margin: 20px auto;
+		padding: 10px;
+		color: black;
+		font-size: 20px;
+		border: 0px;
+		border-radius: 5px;
+		background-color: rgba(255, 255, 255, 0.9);
+		text-align: center;
+		transition:all .25s;
 
-.filtermenu .searchfield {
-	font-size: 20px;
-	width: 100%;
-}
+		&:focus {
+			max-width:50%;
+		}
+	}
 
-.filtermenu .faculty {
-	background-color: #ccccff;
-}
+	.menu-wrapper {
+		background-color: #2c2c2c;
+	}
 
-.filtermenu .faculty .facultylist {
-	background-color: #bbbbff;
+	.menu{
+		position: relative;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		max-width: 1140px;
+		margin: 0 auto;
+		
+	}
+
+	.faculty {
+		color: white;
+		width: calc(20% - 20px);
+		margin:10px;
+
+		@media(max-width: 767px){
+			width: 100%;
+			margin:0;
+		}
+
+		
+
+		&[data-selected="true"] {
+
+			.title {
+				position: relative;
+				background-color: rgba(255,255,255,.1);
+
+				&:after {
+					content:'';
+					position:absolute;
+					bottom:0px;
+					left:10px;
+					display:block;
+					width:calc(100% - 20px);
+					margin:0 auto;
+					background-color:rgba(255,255,255,.25);
+					height:1px;
+				}
+			}
+
+			.list {
+				display:block;
+				background-color:rgba(255,255,255,.1);
+			}
+		}
+
+		.title {
+			padding: 10px;
+			text-align: center;
+			cursor: pointer;
+			transition: all .15s;
+			font-weight: 500;
+
+			&:hover{
+				background-color: $menuHoverColor;
+			}
+		}
+
+		.list {
+			display:none;
+			list-style: none;
+			margin: 0;
+			padding: 5px 0px;
+			text-align: center;
+			@media(max-width: 767px){
+				border-bottom:1px solid rgba(255,255,255,.25);
+			}
+
+			li {
+				padding: 5px 10px;
+				opacity:.5;
+				font-size:15px;
+				cursor:pointer;
+				font-size: 14px;
+				@media(max-width: 767px){
+					max-width: 75%;
+					margin: 10px auto;
+					font-size:16px;
+				}
+
+				&[data-selected="true"] {
+					opacity:1;
+				}
+			}
+		}
+	}
 }
 
 .examview {
-	float: left;
-	margin-left: 10px;
-	background-color: #ffdddd;
-}
 
-.examview .examentry {
+	ul {
+		list-style: none;
+		margin: 0;
+		padding:0;
+	}
 
+	li {
+		margin:20px 0;
+		text-align:center;
+	}
+
+	.datelabel {
+		display:inline-block;
+		font-size:30px;
+		margin-bottom:20px;
+		padding:5px;
+		border-bottom:1px solid steelblue;
+	}
+
+	.exam-wrapper {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+		text-align:left;
+
+		.examentry {
+			width: 25%;
+			background-color:#fff;
+			border-radius:5px;
+			margin:10px;
+			padding:20px;
+
+			@media(max-width: 767px){
+				width: 100%;
+				margin: 5px 10px;
+			}
+
+			h3 {
+				font-size:16px;
+				margin:0 0 10px 0;
+			}
+
+			time {
+				font-weight: 500;
+			}
+		}
+	}
 }
