--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -20,13 +20,30 @@ a {
 .filtermenu {
 	position: relative;
 	background-color: #000;
+	text-align: center;
+
+	h1 {
+		color: white;
+		font-size: 42px;
+		padding-top: 10px;
+		margin: 0;
+	}
 
 	.semesterbuttoncontainer {
+		display: inline-flex;
+		background-color: rgb(230, 230, 230);
+		font-size: 24px;
+		border-top: 20px;
+		border-radius: 5px;
+		margin: 10px 0 0 0;
 
-		div {
-		}
+		.sem-button-part{
+			padding: 5px 20px;
+			border-radius: 5px;
 
-		.selected{
+			&[data-selected="true"] {
+				background-color: rgb(200, 255, 200);
+			}
 		}
 	}
 
@@ -45,6 +62,10 @@ a {
 		text-align: center;
 		transition:all .25s;
 
+		@media(max-width: 767px){
+			min-width: 50%;
+		}
+
 		&:focus {
 			max-width:50%;
 		}
@@ -59,14 +80,12 @@ a {
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-		max-width: 1140px;
 		margin: 0 auto;
 		
 	}
 
 	.faculty {
 		color: white;
-		width: calc(20% - 20px);
 		margin:10px;
 
 		@media(max-width: 767px){
@@ -149,6 +168,13 @@ a {
 		list-style: none;
 		margin: 0;
 		padding:0;
+
+		.noresults {
+			margin-top: 30px;
+			font-size: 30px;
+			color: rgb(150, 150, 150);
+			text-align: center;
+		}
 	}
 
 	li {
@@ -189,6 +215,11 @@ a {
 
 			time {
 				font-weight: 500;
+			}
+
+			.time-links-wrapper {
+				display: flex;
+				justify-content: space-between;
 			}
 		}
 	}
