--- a/frontend/scss/styles.scss
+++ b/frontend/scss/styles.scss
@@ -27,6 +27,9 @@ a {
 		font-size: 42px;
 		padding-top: 10px;
 		margin: 0;
+		@media(max-width: 767px){
+			font-size: 24px;
+		}
 	}
 
 	.semesterbuttoncontainer {
